fixed figure tag center alignment issue

--- a/sass/blocks/_blocks.scss
+++ b/sass/blocks/_blocks.scss
@@ -83,6 +83,20 @@
 			margin-right: calc(2 * (100vw / 12));
 		}
 	}
+	&.aligncenter {
+
+		margin-left: auto;
+		margin-right: auto;
+
+		@include media(tablet) {
+			margin-left: calc(2 * (100vw / 12));
+			margin-right: calc(2 * (100vw / 12));
+			max-width: calc(10 * (100vw / 12));
+			position: relative;
+			left: 25%;
+			transform: translate(-50%);
+		}
+	}
 }
 
 .entry-content {
