--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ abbr[title] {
   text-decoration: underline;
   /* 2 */
   -webkit-text-decoration: underline dotted;
-          text-decoration: underline dotted;
+  text-decoration: underline dotted;
   /* 2 */
 }
 
@@ -2491,6 +2491,24 @@ body.page .main-navigation {
     margin-left: calc(2 * 1rem);
     margin-right: calc(2 * (100vw / 12));
   }
+}
+
+.entry-content > *.aligncenter,
+.entry-summary > *.aligncenter {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media only screen and (min-width: 768px) {
+  .entry-content > *.aligncenter,
+  .entry-summary > *.aligncenter {
+    margin-left: calc(2 * (100vw / 12));
+    margin-right: calc(2 * (100vw / 12));
+    max-width: calc(10 * (100vw / 12));
+    position: relative;
+    left: 25%;
+    transform: translateX(-50%);
+}
 }
 
 .entry-content .wp-block-audio {
